Added age field in PetDTO, modified PetService getDiagnosisByPetId method