@@ -35,14 +35,11 @@ public class PetService {
     }
 
     public List<DiagnosisDTO> getDiagnosisByPetId(UUID id) {
-        List<Pet> pets = petRepository.findAll();
-        return pets.stream()
-                .filter(p -> p.getId().equals(id))
-                .findFirst()
-                .orElseThrow()
+        Pet pet = petRepository.findById(id).orElseThrow();
+        return pet
                 .getDiagnosis()
                 .stream()
-                .map(d -> DiagnosisMapper.INSTANCE.diagnosisToDiagnosisDTO(d))
-                .collect(Collectors.toList());
+                .map(DiagnosisMapper.INSTANCE::diagnosisToDiagnosisDTO)
+                .toList();
     }
 }
